fix: inconsistent spacing

--- a/full-stack-javascript/fsj-03-advanced-html-and-css/20-homepage/src/styles/styles.css
+++ b/full-stack-javascript/fsj-03-advanced-html-and-css/20-homepage/src/styles/styles.css
@@ -243,6 +243,7 @@ footer > div > .right img {
 @media (max-width: 900px) {
   section.top {
     padding-top: 6rem;
+    padding-bottom: 1rem;
     display: block;
     width: 100%;
   }
@@ -283,6 +284,7 @@ footer > div > .right img {
     min-width: 100%;
     max-height: 300px;
     transform: scale(1) translateX(0rem);
+    margin-bottom: 0;
   }
   section.top > .left p {
     font-size: 3.5rem;
